--- a/zf_garage.html
+++ b/zf_garage.html
@@ -7,42 +7,54 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="stylegarage.css">
 </head>
-<body>
+<body class="bg-dark">
 
 <section class="home">
   <img class="col-12" src="zfshop.jpeg" style="width: 100%; height: 100%;" alt="">
 </section> 
 <br>
-<div class="zfshop">
-  <h1 class="fw-bolder text-center fs3">ZF-GARAGESHOP</h1>
-  <h1 class="fw-bolder fs-4 text-center">Aksesoris mobil berau</h1>
+<div class="zfshop text-light">
+  <h1 class="fw-bolder text-center fs3 text-light">ZF-GARAGESHOP</h1>
+  <h1 class="fw-bolder fs-4 text-center text-light">Aksesoris mobil berau</h1>
 </div>
 
 
 
 
 
-    <div class="container float-xxl-none">
+    <div class="container float-xxl-none bg-dark">
         <div class="kotak4">
             
-            <div class="container2 container2-sm ">
+            <div class="container2 container2-sm bg-dark">
                 <br>
                 <div class="row2 row-cols-12 text-center  fw-bolder bg-dark bg-gradient">
                   <br>
                   <h1 class="hr fw-bolder text-center fs-3 ">MENU</h1>
-                  <div class="col2 text-center">Aksesoris</div>
-                  <div class="col2">partracing</div>
-                  <div class="col2">Carbon</div>
-                  <div class="col2">Bodykit</div>
-                  <div class="col2">Customxbar</div>
-                  <div class="col2">Jokracing</div>
-                  <div class="col2">Respeed Racing</div>
-                  <div class="col2 ">Velg</div>
-                  <div class="col2">Xbar</div>
-                  <div class="col2">Spoiler</div>
+                  <br>
+                  <a href="aksesoris.html" class="text-light">Aksesoris</a>
+                  <br>
+                  <a href="partracing.html" class="text-light">partracing</a>
+                  <br>
+                  <a href="Carbon.html" class="text-light">Carbon</a>
+                  <br>
+                  <a href="bod1.3.html" class="text-light">Bodykit</a>
+                  <br>
+                  <a href="customxbar.html" class="text-light">Customxbar</a>
+                  <br>
+                  <a href="jokracing.html" class="text-light">Jokracing</a>
+                  <br>
+                  <a href="respeed.html" class="text-light">Resped Racing</a>
+                  <br>
+                  <a href="velg.html" class="text-light">Velg</a>
+                  <br>
+                  <a href="Xbar.html" class="text-light">Xbar</a>
+                  <br>
+                  <a href="Spoiler.html" class="text-light">Spoiler</a>
+                  <br>
+                  
                   <br> 
-                     <div class="dropdown">
-                        <a class="btn btn-secondary dropdown-toggle bg-dark-light" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                     <div class="dropdown text-light">
+                        <a class="btn btn-secondary dropdown-toggle bg-info fw-bolder" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                           MENU
                        </a>                
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -64,7 +76,7 @@
         </div>
     </div>
     <br>
-</section>
+</section class="bg-dark">
     <div class="container float-xxl-none">
         <div class="kotak4"> 
             <div class="container2 container2-sm ">
@@ -88,32 +100,30 @@
     </div>
     <br>
 </section>
-<section>
+<section class="bg-dark">
   <br><br>
-  <div class="cyber">
-    <h1 class="fw-bolder fs-2 text-center">Keterangan</h1>
+  <div class="cyber text-light">
+    <h1 class="fw-bolder fs-2 text-center text-light">Keterangan</h1>
     <br>
     <div class="faaa">
-      <h5 class="awal text-dark col-8 text-center fs-6 fst-italic ">ZF-GARAGESHOP merupakan salah satu tempat Variasi Aksesoris mobil yang ada di berau
-        terbukti aman dan terpercaya.sudah memiliki banyak pelanggan,ZF-GARAGESHOP kini memiliki 
-        banyak menu barang variasi Aksesoris mobil yang tersedia 
+      <h5 class="awal text-light col-8 text-center fs-6 fst-italic ">ZF-GARAGESHOP merupakan salah satu tempat Variasi Aksesoris mobil yang ada di berau
+        terbukti aman dan terpercaya.ALAMAT Jl.Dermaga.Gang Wakab.KAB.Berau
       </h5>
       <br>
     </div>
   </div>
 </section>
 <br>
-<section class="text-bg-light rounded-top" style="width: 100%;">
-  <div class="cybers">
+<section class=" taii text-light rounded-top " style="width: 100%;">
+  <div class="cybers bg-dark">
     <br><br>
-    <h1 class="fw-bolder fs-4 text-dark text-center">Story ZF-GARAGESHOP</h1>
+    <h1 class="fw-bolder fs-4 text-light text-center">Story ZF-GARAGESHOP</h1>
     <br>
-    <h5 class="awal text-dark col-6 text-center text-dark fs-6 fst-italic">ZF-GARAGESHOP berdiri selama 2 tahun
-      dan pastinya sudah memiliki pengalaman yang sangat cukup,Owner dari ZF-GARAGESHOP adalah
-      Zekri Firman yang maniac mesin 
+    <h5 class="awal text-light col-6 text-center text-light fs-6 fst-italic">ZF-GARAGESHOP berdiri selama 2 tahun
+      dan pastinya sudah memiliki pengalaman yang lumayan.
     </h5>
     <br>
-    <div class="faa rounded-top">
+    <div class="faa rounded-top bg-dark">
       <div class="cybers">
         <br><br>
         <h1 class="fw-bolder fs-4 text-white"></h1>
